@@ -7,6 +7,7 @@ version <next>:
 - VAAPI-accelerated VP8 and HEVC decoding
 - VAAPI-accelerated deinterlacing
 - config.log and other configuration files moved into avbuild/ directory
+- Cineform HD decoder
 
 
 version 12:
